--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h1{
 
 .btn{
     cursor: pointer;
-    background-color: darkseagreen;
+    background-color: darksalmon;
     border: 0;
     border-radius: 4px;
     color: #fff;
@@ -54,6 +54,7 @@ h1{
     transform: translate(-50%,-800px);
     background-color: #333;
     color: white;
+    padding: 20px;
     border-radius: 5px;
     transition: all 1s ease-in-out;
 }
@@ -96,9 +97,51 @@ main{
 
 .box{
     box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    border-radius: 5px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    transition: box-shadow 0.2s ease-out;
+}
+
+.box.active{
+    box-shadow: 0 0 10px 5px darksalmon;
 }
 .box img{
     width: 100%;
     object-fit: cover;
-    height: fit-content;
+    height: 200px;
+
+}
+
+.box .info{
+    background-color:darksalmon;
+    color: white;
+    font-size: 18px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 10px;
+    text-align: center;
+    height: 100%;
+}
+
+
+@media(max-width:1100px){
+    main{
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+
+@media(max-width:760px){
+    main{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+@media(max-width:500px){
+    main{
+        grid-template-columns: 1fr;
+    }
 }
